# 2025-rugby-async-demo

./: Cargo.toml  README.md
examples/: complex_game_simulation.rs  modern_rugby_2024.rs
src/: main.rs
